[workspace]
members = [
    "rustbof",
    "libs/bofalloc",
    "libs/bofentry",
    "libs/bofhelper"
, "libs/bofentry_macro"]
resolver = "2"

[profile.dev]
panic = "abort"
opt-level = "z"
codegen-units = 1
strip = true

[profile.release]
panic = "abort"
opt-level = "z"
codegen-units = 1
strip = true
