[package]
name = "rustbof"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bofhelper = { path = "../libs/bofhelper" }
bofentry = { path = "../libs/bofentry" }
bofalloc = { path = "../libs/bofalloc", optional = true }

[features]
default = ["alloc"]
alloc = ["bofalloc", "bofentry/alloc"]