[package]
name = "bofentry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bofhelper = { path = "../bofhelper" }
bofalloc = { path = "../bofalloc", optional = true }

[features]
alloc = ["bofalloc"]